Libidn NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
See the end for copying conditions.

* Version 1.7 (unreleased)

** idn: new parameter --nfkc to process string with Unicode v3.2 NFKC.

** Update gnulib files.

** API and ABI is backwards compatible with the previous version.

* Version 1.6 (released 2008-03-19)

** Add native Windows Visual Studio project files.
Contributed by Adam Strzelecki <ono@java.pl>.

** Remove non-free portions of RFC 3454 in doc/specifications/rfc3454.txt.

** Update gnulib files.

** Doc fixes in IDNA to clarify that some functions operate on
** just one domain labels and some operate on domain name (which
** can contain several domain labels).

** API and ABI is backwards compatible with the previous version.

* Version 1.5 (released 2008-02-19)

** Don't include wchar.h in idn-int.h.
Fixes problems on uClibc systems which lack a wchar.h.  Reported by
Mike Frysinger <vapier@gentoo.org>, see
<http://thread.gmane.org/gmane.comp.gnu.libidn.general/118>.

** Added appendix 'On Label Separators' to the manual.
Thanks to Erik van der Poel <erikv@google.com> for bringing the issue
to our attention and for discussing the matter.  See
<http://thread.gmane.org/gmane.comp.gnu.libidn.general/96>.

** Improved rendering of non-ASCII in the info manual.
Done by adding a @documentencoding UTF-8.  This affect how the
examples are encoded, the files examples/*.c are now encoded using
UTF-8 instead of a mix of ISO-8859-1 and ISO-8859-15.

** Fix non-portable use of brace expansion in makefiles.

** Update translations.

** Update gnulib files.

** API and ABI is backwards compatible with the previous version.

* Version 1.4 (released 2008-01-09)

** Fixes to make the C# port compile under Mono.

** Update gnulib files.

** Improve idn --version and --help output to conform to GNU standards.
This also enables translations of --help output.
