@@ -1,5 +1,5 @@
 /* nfkc.c --- Unicode normalization utilities.
- * Copyright (C) 2002, 2003, 2004, 2006, 2007  Simon Josefsson
+ * Copyright (C) 2002, 2003, 2004, 2006, 2007, 2008  Simon Josefsson
  *
  * This file is part of GNU Libidn.
  *
@@ -1033,6 +1033,12 @@ stringprep_utf8_nfkc_normalize (const char *str, ssize_t len)
   return g_utf8_normalize (str, len, G_NORMALIZE_NFKC);
 }
 
+char *
+stringprep_utf8_nfc_normalize (const char *str, ssize_t len)
+{
+  return g_utf8_normalize (str, len, G_NORMALIZE_NFC);
+}
+
 /**
  * stringprep_ucs4_nfkc_normalize - normalize Unicode string
  * @str: a Unicode string.
@@ -1052,6 +1058,19 @@ stringprep_ucs4_nfkc_normalize (uint32_t * str, ssize_t len)
 
   p = stringprep_ucs4_to_utf8 (str, len, 0, 0);
   result_wc = _g_utf8_normalize_wc (p, -1, G_NORMALIZE_NFKC);
+  free (p);
+
+  return result_wc;
+}
+
+uint32_t *
+stringprep_ucs4_nfc_normalize (uint32_t * str, ssize_t len)
+{
+  char *p;
+  uint32_t *result_wc;
+
+  p = stringprep_ucs4_to_utf8 (str, len, 0, 0);
+  result_wc = _g_utf8_normalize_wc (p, -1, G_NORMALIZE_NFC);
   free (p);
 
   return result_wc;
