@@ -1,5 +1,5 @@
 /* stringprep.h --- Header file for stringprep functions.             -*- c -*-
- * Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007  Simon Josefsson
+ * Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008  Simon Josefsson
  *
  * This file is part of GNU Libidn.
  *
@@ -209,6 +209,10 @@ extern "C"
   extern char *stringprep_utf8_nfkc_normalize (const char *str, ssize_t len);
   extern uint32_t *stringprep_ucs4_nfkc_normalize (uint32_t * str,
 						   ssize_t len);
+
+  extern char *stringprep_utf8_nfc_normalize (const char *str, ssize_t len);
+  extern uint32_t *stringprep_ucs4_nfc_normalize (uint32_t * str,
+						  ssize_t len);
 
   extern const char *stringprep_locale_charset (void);
   extern char *stringprep_convert (const char *str,
