@@ -33,6 +33,7 @@ option "allow-unassigned" - "Toggle IDNA AllowUnassigned flag" flag off
 option "usestd3asciirules" - "Toggle IDNA UseSTD3ASCIIRules flag" flag off
 option "tld" t "Check string for TLD specific rules\nOnly for --idna-to-ascii and --idna-to-unicode" flag on
 option "nfkc" k "Normalize string according to Unicode v3.2 NFKC" no
+option "nfc" c "Normalize string according to Unicode v3.2 NFC" no
 option "profile" p "Use specified stringprep profile instead\nValid stringprep profiles are `Nameprep', `iSCSI', `Nodeprep', `Resourceprep', `trace', and `SASLprep'." string no
 option "debug" - "Print debugging information" flag off
 option "quiet" - "Silent operation" flag off
